results/SVCOMP/conversational/log-arrayread1-2024_03_08_13_14_50.txt
class arrayread1 {

  static arrayread1 readback;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    arrayread1[] a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == 0 ==> c == 1 && readback == null;
                                         ^
1 error

class arrayread1 {

  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:9: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == 0 ==> c == 1 && readback == null;
                                         ^
1 error

class arrayread1 {

  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:9: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == 0 ==> c == 1 && readback == null;
                                         ^
1 error

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (PossiblyNullAssignment) in method func
    readback = a[0];
             ^
1 verification failure

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && (\exists int i; 0 <= i && i < a.length; a[i] == null) && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (PossiblyNullAssignment) in method func
    readback = a[0];
             ^
1 verification failure

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (PossiblyNullAssignment) in method func
    readback = a[0];
             ^
1 verification failure

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && (\forall int i; 0 <= i && i < a.length; a[i] == null) && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (PossiblyNullAssignment) in method func
    readback = a[0];
             ^
1 verification failure

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = null;
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (PossiblyNullAssignment) in method func
    readback = null;
             ^
1 verification failure

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/arrayread1.java:10:) in method func
    return ((readback == null) ? 1 : 0);
    ^
/home/max/Documents/JMLGPT/tmp/arrayread1.java:10: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/arrayread1.java:14:
  //@ ensures \result == 0 ==> c == 1 && readback == null;
      ^
2 verification failures

class arrayread1 {

  //@ spec_public
  static arrayread1 readback;

  //@ spec_public
  static arrayread1[] a;

  //@ ensures \result == 1 ==> c != 1;
  //@ ensures \result == 0 ==> c == 1 && readback == null;
  public static int func(int c) {
    if (c != 1) return -1;
    a = new arrayread1[c];
    readback = null;
    return ((readback == null) ? 0 : 1);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:14: verify: The prover cannot establish an assertion (PossiblyNullAssignment) in method func
    readback = null;
             ^
1 verification failure

